--- a/styles/style.scss
+++ b/styles/style.scss
@@ -75,4 +75,65 @@ body {
     margin-bottom: 1.5rem;
 }
 
-// === common styles ===
+// === / common styles ===
+
+
+// === header ===
+.cv-header {
+    margin-bottom: 3rem;
+    padding: 1rem;
+
+    &-content {
+        display: flex;
+        align-items: center;
+
+        &__avatar {
+            border-radius: 50%;
+            border: 1px solid;
+            overflow: hidden;
+            width: 20rem;
+            height: 20rem;
+            background: url('../image/photo.jpg') center center no-repeat;
+            background-size: cover;
+
+            @media (max-width: 46.875rem) {
+                width: 10rem;
+                height: 10rem;
+            }
+
+            @media (max-width: 28.125rem) {
+                width: 8rem;
+                height: 8rem;
+            }
+        }
+
+        &__data {
+            margin-left: 4.5rem;
+
+            &-name {
+                font-size: 6rem;
+
+                @media (max-width: 46.875rem) {
+                    font-size: 4rem;
+                }
+
+                @media (max-width: 34.375rem) {
+                    font-size: 3rem;
+                }
+
+                @media (max-width: 25rem) {
+                    font-size: 2rem;
+                }
+            }
+
+            &-title {
+                font-size: 3rem;
+        
+                @media (max-width: 34.375rem) {
+                    font-size: 2rem;
+                }
+            }
+        }
+    }
+}
+// === / header ===
