--- a/styles/style.css
+++ b/styles/style.css
@@ -423,6 +423,22 @@ body {
   margin-bottom: 1.5rem;
 }
 
+.education-name {
+  font-weight: 700;
+  margin-bottom: 0.5rem;
+}
+
+.education-place {
+  font-weight: 500;
+  font-style: italic;
+  font-size: 1.3rem;
+  margin-bottom: 0.5rem;
+}
+
+.education-years {
+  font-size: 1.7rem;
+}
+
 .cv-header {
   margin-bottom: 3rem;
   padding: 1rem;
@@ -495,5 +511,58 @@ body {
   .cv-header-content__data-title {
     font-size: 2rem;
   }
+}
+
+.cv-main .cv-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.cv-main__about {
+  -ms-flex-preferred-size: 30%;
+      flex-basis: 30%;
+  margin-right: 1.5rem;
+}
+
+.cv-main__description {
+  -ms-flex-preferred-size: 70%;
+      flex-basis: 70%;
+}
+
+.cv-main__description .title {
+  font-size: 3rem;
+  margin-bottom: .5rem;
+}
+
+@media (max-width: 34.375rem) {
+  .cv-main__description .title {
+    font-size: 2rem;
+  }
+}
+
+.cv-main__description p {
+  font-size: 2rem;
+}
+
+@media (max-width: 34.375rem) {
+  .cv-main__description p {
+    font-size: 1.5rem;
+  }
+}
+
+.cv-main__description h4 {
+  font-size: 2rem;
+}
+
+@media (max-width: 34.375rem) {
+  .cv-main__description h4 {
+    font-size: 1.5rem;
+  }
+}
+
+.cv-main__description ul {
+  list-style: circle;
+  margin-left: 1.5rem;
 }
 /*# sourceMappingURL=style.css.map */
