--- a/styles/style.scss
+++ b/styles/style.scss
@@ -75,6 +75,22 @@ body {
     margin-bottom: 1.5rem;
 }
 
+.education-name {
+    font-weight: 700;
+    margin-bottom: 0.5rem;
+}
+
+.education-place {
+    font-weight: 500;
+    font-style: italic;
+    font-size: 1.3rem;
+    margin-bottom: 0.5rem;
+}
+
+.education-years {
+    font-size: 1.7rem;
+}
+
 // === / common styles ===
 
 
@@ -137,3 +153,50 @@ body {
     }
 }
 // === / header ===
+
+// === main ===
+.cv-main {
+
+    .cv-container {
+        display: flex;
+    }
+
+    &__about {
+        flex-basis: 30%;
+        margin-right: 1.5rem;
+    }
+
+    &__description {
+        flex-basis: 70%;
+
+        .title {
+            font-size: 3rem;
+            margin-bottom: .5rem;  
+
+            @media (max-width: 34.375rem) {
+                font-size: 2rem;
+            }
+        }
+
+        p {
+            font-size: 2rem;
+            @media (max-width: 34.375rem) {
+                font-size: 1.5rem;
+            } 
+        }
+
+        h4 {
+            font-size: 2rem;
+            @media (max-width: 34.375rem) {
+                font-size: 1.5rem;
+            }
+        }
+    
+        ul {
+            list-style: circle;
+            margin-left: 1.5rem;
+        }
+    }
+    
+}
+// === / main ===
