--- a/styles/normalize.css
+++ b/styles/normalize.css
@@ -340,314 +340,4 @@ template {
 [hidden] {
   display: none;
 }
-
-:root {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  font-size: 10px;
-}
-
-*,
-*::before,
-*::after {
-  -webkit-box-sizing: inherit;
-          box-sizing: inherit;
-  margin: 0;
-  padding: 0;
-}
-
-ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  margin-bottom: 0.4rem;
-}
-
-p {
-  margin: 0;
-  margin-bottom: 1rem;
-}
-
-a {
-  color: black;
-  -webkit-transition: all .3s linear;
-  transition: all .3s linear;
-  -webkit-text-decoration-color: transparent;
-          text-decoration-color: transparent;
-}
-
-a:hover {
-  font-weight: 600;
-  -webkit-text-decoration-color: #333333;
-          text-decoration-color: #333333;
-}
-
-body {
-  font-size: 1.5rem;
-  font-family: 'Akaya Telivigala', cursive;
-}
-
-.cv-container {
-  max-width: 123rem;
-  margin: 0 auto;
-  padding: 0 1.5rem;
-}
-
-.caption {
-  display: inline-block;
-  font-size: 2.5rem;
-  margin-bottom: 1.5rem;
-  border-bottom: 3px solid;
-}
-
-@media (max-width: 34.375rem) {
-  .caption {
-    font-size: 2rem;
-  }
-}
-
-.list-item {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-bottom: 1rem;
-}
-
-.icon {
-  margin-right: .5rem;
-}
-
-.skills-list {
-  list-style-type: disc;
-  margin-left: 1.5rem;
-  margin-bottom: 1.5rem;
-}
-
-.education-name {
-  font-weight: 700;
-  margin-bottom: 0.5rem;
-}
-
-.education-place {
-  font-weight: 500;
-  font-style: italic;
-  font-size: 1.3rem;
-  margin-bottom: 0.5rem;
-}
-
-.education-years {
-  font-size: 1.7rem;
-}
-
-.cv-header {
-  margin-bottom: 3rem;
-  padding: 1rem;
-}
-
-.cv-header-content {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.cv-header-content__avatar {
-  border-radius: 50%;
-  border: 1px solid;
-  overflow: hidden;
-  width: 15rem;
-  height: 15rem;
-  background: url("../image/photo.jpg") center center no-repeat;
-  background-size: cover;
-}
-
-.cv-header-content__avatar img {
-  width: 0;
-  height: 0;
-}
-
-@media (max-width: 46.875rem) {
-  .cv-header-content__avatar {
-    width: 10rem;
-    height: 10rem;
-  }
-}
-
-@media (max-width: 28.125rem) {
-  .cv-header-content__avatar {
-    width: 8rem;
-    height: 8rem;
-  }
-}
-
-.cv-header-content__data {
-  margin-left: 4.5rem;
-}
-
-.cv-header-content__data-name {
-  font-size: 6rem;
-}
-
-@media (max-width: 66.875rem) {
-  .cv-header-content__data-name {
-    font-size: 4rem;
-  }
-}
-
-@media (max-width: 46.875rem) {
-  .cv-header-content__data-name {
-    font-size: 4rem;
-  }
-}
-
-@media (max-width: 34.375rem) {
-  .cv-header-content__data-name {
-    font-size: 3rem;
-  }
-}
-
-@media (max-width: 25rem) {
-  .cv-header-content__data-name {
-    font-size: 2rem;
-  }
-}
-
-.cv-header-content__data-title {
-  font-size: 3rem;
-}
-
-@media (max-width: 34.375rem) {
-  .cv-header-content__data-title {
-    font-size: 2rem;
-  }
-}
-
-.cv-main .cv-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.cv-main__about {
-  -ms-flex-preferred-size: 30%;
-      flex-basis: 30%;
-  margin-right: 1.5rem;
-}
-
-.cv-main__description {
-  -ms-flex-preferred-size: 70%;
-      flex-basis: 70%;
-}
-
-.cv-main__description .title {
-  font-size: 3rem;
-  margin-bottom: .5rem;
-}
-
-@media (max-width: 34.375rem) {
-  .cv-main__description .title {
-    font-size: 2rem;
-  }
-}
-
-.cv-main__description p {
-  font-size: 2rem;
-}
-
-@media (max-width: 34.375rem) {
-  .cv-main__description p {
-    font-size: 1.5rem;
-  }
-}
-
-.cv-main__description h4 {
-  font-size: 2rem;
-}
-
-@media (max-width: 34.375rem) {
-  .cv-main__description h4 {
-    font-size: 1.5rem;
-  }
-}
-
-.cv-main__description ul {
-  list-style: circle;
-  margin-left: 1.5rem;
-}
-
-.cv-main__description-code pre + pre {
-  margin-top: 1em;
-}
-
-.cv-main__description-code pre {
-  background-color: rgba(204, 204, 204, 0.99);
-  border-radius: 1em;
-  width: 100%;
-  height: 100%;
-  padding: 1em;
-  white-space: pre-line;
-}
-
-@media (max-width: 34.375rem) {
-  .cv-main__description-code pre {
-    font-size: 0.6em;
-  }
-}
-
-@media (max-width: 25rem) {
-  .cv-main__description-code pre {
-    font-size: .6rem;
-  }
-}
-
-.cv-footer {
-  margin-top: 1em;
-}
-
-.cv-footer svg {
-  width: 5rem;
-  height: 5rem;
-}
-
-@media (max-width: 34.375rem) {
-  .cv-footer svg {
-    width: 3rem;
-    height: 3rem;
-  }
-}
-
-.cv-footer p {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  margin: 0;
-}
-
-@media (max-width: 28.125rem) {
-  .cv-footer p {
-    font-size: 1.2rem;
-  }
-}
-
-.cv-footer a {
-  margin-left: 1rem;
-}
-
-@media (max-width: 34.375rem) {
-  .cv-footer a {
-    margin-left: .5rem;
-  }
-}
-
-.cv-footer time {
-  margin-left: 1em;
-}
-/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=normalize.css.map */
