--- a/styles/style.css
+++ b/styles/style.css
@@ -491,4 +491,12 @@ body {
 .cv-footer {
   text-align: center;
   padding: 1em;
+  margin-top: 1.5rem;
+  background-color: hsla(193deg, 74%, 94%, 0.5);
+}
+.cv-footer svg {
+  width: 5rem;
+}
+.cv-footer p + p {
+  margin-top: 1.2rem;
 }/*# sourceMappingURL=style.css.map */
