--- a/styles/style.scss
+++ b/styles/style.scss
@@ -219,6 +219,15 @@ body {
 .cv-footer {
     text-align: center;
     padding: 1em;
+    margin-top: 1.5rem;
+    background-color: hsla(193, 74%, 94%, 0.5);
+    svg {
+        width: 5rem;
+    }
+
+    p + p {
+        margin-top: 1.2rem;
+    }
 }
 
 // === / footer ===
