refactor: update code example section

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -199,7 +199,7 @@ body {
             border-radius: 1em;
             width: 100%;
             height: 100%;
-            padding: 1em;
+            padding: 0 1em;
             white-space: pre-line;
 
             @media (max-width: 34.375rem) {
